--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -8,12 +8,12 @@
         android:id="@+id/enterAdress"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Enter address"/>
+        android:hint="@string/enter_address"/>
     <Button
         android:id="@+id/searchButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:text="Search"/>
+        android:text="@string/search"/>
 
 </LinearLayout>
