--- a/app/src/main/res/layout/image_cell.xml
+++ b/app/src/main/res/layout/image_cell.xml
@@ -8,5 +8,6 @@
         android:id="@+id/downloadedImage"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:scaleType="centerCrop"
         android:gravity="center_vertical" />
 </LinearLayout>
